--- a/border.html
+++ b/border.html
@@ -9,14 +9,16 @@
             border-width: 5px 10px 15px ; /* top right bottom left */
             border-style: solid;
             border-color: gray;
-            margin: 50px;
+            height: 300px;
+            width: 50%;
+            padding:20px;
+            margin: 300px;
         }
 
         .border-style-example {
             border-style: dotted dashed solid double; /* top right bottom left */
             border-width: 5px;
             border-color: blue;
-            width: 50px;
             display: inline;
         }
 
