--- a/text.html
+++ b/text.html
@@ -6,8 +6,10 @@
     <title>CSS Text Properties Example</title>
     <style>
         /* Text Alignment */
-        .align-left { text-align: left; }
-        .align-right { text-align: right; }
+        .align-left { 
+            text-align: end; 
+        }
+        .align-right { text-align: start; }
         .align-center { text-align: center; }
         .align-justify { text-align: justify; }
 
@@ -16,7 +18,9 @@
         .decoration-underline { text-decoration: underline; }
         .decoration-overline { text-decoration: overline; }
         .decoration-line-through { text-decoration: line-through; }
-        .decoration-color { text-decoration: underline; text-decoration-color: blue; }
+        .decoration-color { 
+            text-decoration: underline;
+             text-decoration-color: blue; }
         .decoration-style { text-decoration: underline; text-decoration-style:wavy; }
 
         /* Text Indentation */
@@ -28,7 +32,7 @@
         .transform-capitalize { text-transform: capitalize; }
 
         /* Text Shadow */
-        .shadow { text-shadow: 2px 2px 4px rgb(239, 152, 152); }
+        .shadow { text-shadow: 2px 2px 4px rgb(176, 54, 54); }
 
         /* Letter and Word Spacing */
         .letter-spacing { letter-spacing: 3px; }
@@ -58,7 +62,7 @@
     <p class="decoration-style">This text has a dashed underline.</p>
 
     <h2>Text Indentation</h2>
-    <p class="indent">The first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30px</p>
+    <p class="indent">The first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30pxThe first line of this paragraph is indented by 30px.The first line of this paragraph is indented by 30px</p>
 
     <h2>Text Transformation</h2>
     <p class="transform-uppercase">This text is in uppercase.</p>
