--- a/box.html
+++ b/box.html
@@ -11,7 +11,8 @@
             padding: 100px; /* Padding around the content */
             border: 5px solid black; /* Border surrounding padding and content */
             margin: 80px; /* Margin outside the border */
-            box-sizing: content-box; /* Includes padding and border in the element's total width and height */
+            box-sizing: border-box; /* Includes padding and border in the element's total width and height */
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
