--- a/dis.html
+++ b/dis.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -88,8 +88,9 @@
   </ul>
 
 </body>
-</html> -->
-<!-- <!DOCTYPE html>
+</html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
