--- a/dis3.html
+++ b/dis3.html
@@ -30,7 +30,6 @@
 
   <p> Example 8: table </p>
   <div class="container" style="display: table;">
-    <p>1ST</p>
     <div class="box" style="display: table-row;">
       <div class="box" style="display: table-cell;">Table Cell 1</div>
       <div class="box" style="display: table-cell;">Table Cell 2</div>
@@ -42,9 +41,11 @@
 
   <p> Example 10: contents </p>
   <div class="container" style="display: contents;">
-    <div></div>
+    <p>PARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPHPARAGRAPH</p>
     <div class="box">
         <p>PARAGRAPH</p>
+        
+        <!-- <p>PARAGRAPH</p>
         <p>PARAGRAPH</p>
         <p>PARAGRAPH</p>
         <p>PARAGRAPH</p>
@@ -54,9 +55,7 @@
         <p>PARAGRAPH</p>
         <p>PARAGRAPH</p>
         <p>PARAGRAPH</p>
-        <p>PARAGRAPH</p>
-        <p>PARAGRAPH</p>
-        <p>PARAGRAPH</p>
+        <p>PARAGRAPH</p> -->
         
     </div>
     <div class="box">Contents 2</div>
