--- a/dis2.html
+++ b/dis2.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -34,9 +34,9 @@
   </div>
 
 </body>
-</html> -->
+</html>
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -59,10 +59,9 @@
 <body>
 
   <p>Example 6: grid </p>
-  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: 1fr 1fr;">
+  <div class="container" style="display: inline-grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: 1fr 1fr;">
     <div class="box">Grid Item 1</div>
     <div class="box">Grid Item 2</div>
-    <div class="box">Grid Item 3</div>
     <div class="box">Grid Item 3</div>
     <div class="box">Grid Item 3</div>
     <div class="box">Grid Item 3</div>
@@ -75,5 +74,5 @@
   </div>
 
 </body>
-</html> -->
+</html>
 
