--- a/table2.html
+++ b/table2.html
@@ -10,7 +10,7 @@
         width: 100%;               
         border: 1px solid black;  
         border-spacing: 15px;     
-        table-layout: fixed;      
+        table-layout:fixed;      
       }
       
       .caption {
@@ -30,8 +30,8 @@
         border: 1px solid gray;   
         padding: 10px;
         text-align: left;
-        white-space: nowrap;      
-        /* overflow: hidden; */
+        white-space: wrap;      
+        overflow: hidden;
       }
       </style>
 </head>
