--- a/mul_columns.html
+++ b/mul_columns.html
@@ -6,11 +6,11 @@
   <title>Multi-column Layout</title>
   <style>
     .container {
-      column-count: 2;
+      column-count: 5;
       column-gap: 20px;
       column-rule: 1px solid rgb(235, 106, 106);
-      /* column-fill: auto;
-      height: 500px; */
+      column-fill:balance;
+      height: 500px;  
     }
     .container p {
       break-inside:avoid;
