--- a/dis.html
+++ b/dis.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -88,7 +88,7 @@
   </ul>
 
 </body>
-</html>
+</html> -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -103,16 +103,20 @@
       margin: 5px;
       background-color: lightblue;
     }
+    #dem1{
+      color: blue;
+      display:block;
+    }
   </style>
 </head>
 <body>
   <div class="box">Block element</div>
   <div class="box">Block element</div>
 
-  <span class="box" >Inline element</span>
-  <span class="box" >Another inline element</span>
+  <span class="box" id="dem1">Inline element</span>
+  <span class="box" id="dem1">Another inline element</span>
 
-  <div class="box" style="display: inline-block;">Inline-block element</div>
-  <div class="box" style="display: inline-block;">Another inline-block element</div>
+  <div class="box" id="dem">Inline-block element</div>
+  <div class="box" id="dem">Another inline-block element</div>
 </body>
-</html> -->
+</html>
