--- a/dis2.html
+++ b/dis2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
 <body>
 
   <p> Example 4: flex </p>
-  <div class="container" style="display: flex;">
+  <div class="container" style="display: flex; ">
     <div class="box">Flex Item 1</div>
     <div class="box">Flex Item 2</div>
     <div class="box">Flex Item 3</div>
@@ -34,7 +34,7 @@
   </div>
 
 </body>
-</html>
+</html> -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -59,7 +59,7 @@
 <body>
 
   <p>Example 6: grid </p>
-  <div class="container" style="display: inline-grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: 1fr 1fr;">
+  <div class="container" style="display: grid; grid-template-columns: 1fr 1fr 1fr; grid-template-rows: 1fr 1fr;">
     <div class="box">Grid Item 1</div>
     <div class="box">Grid Item 2</div>
     <div class="box">Grid Item 3</div>
