--- a/display.html
+++ b/display.html
@@ -10,10 +10,10 @@
         }
         .sub{
             background-color: rgb(241, 234, 224);
-            display: grid;
+            /* display: inline-block; */
         }
         h2{
-            background-color: blue;
+            background-color: rgb(99, 99, 142);
         }
     </style>
 </head>
