--- a/outline.html
+++ b/outline.html
@@ -3,21 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Outline Example</title>
+    <title>Document</title>
     <style>
-        .outline-example {
-            width: 200px;
-            height: 100px;
-            margin: 20px;
-            background-color: lightblue;
-            outline: 5px solid red;  /* Shorthand for outline-width, outline-style, and outline-color */
+        .f{
+            display: table;
         }
-
+        .c{
+            display:table-cell;
+        }
     </style>
 </head>
 <body>
-
-<div class="outline-example">This div has an outline</div>
-
+    <div class="f">
+        <div class="c">col1</div>
+        <div class="c">col2</div>
+        <div class="c">col3</div>
+    </div>
 </body>
 </html>
