--- a/PAttributes2.html
+++ b/PAttributes2.html
@@ -11,7 +11,6 @@
             font-weight: bold;
         }
 
-       
         p::first-letter {
             font-size: 2em;
             color: red;
@@ -41,20 +40,20 @@
         } */
         ul li::marker {
             color: red;
-            font-size: 20px;
+            font-size: 20px;    
         }
-        /* p:hover::first-letter {
+        p:hover::first-letter {
             color: rgb(233, 217, 217);
             font-size: 20px;
         }
-       */
-        [disabled] {
+      
+        /* [disabled] {
             background-color: green;
         }
 
-        [data-info="yes"] {
+        [data-info] {
             color: blue;
-        }
+        } */
     </style>
 </head>
 <body>
