--- a/PAttributes2.html
+++ b/PAttributes2.html
@@ -33,7 +33,7 @@
     <title>Pseudo-elements Example</title>
     <style>
         
-        /* ::selection {
+        /* p::selection {
             background-color: yellow;
             color: black;
             text-decoration:underline;
@@ -47,13 +47,13 @@
             font-size: 20px;
         }
       
-        /* [disabled] {
+        [disabled] {
             background-color: green;
         }
 
-        [data-info] {
+        [data-info='yes'] {
             color: blue;
-        } */
+        }
     </style>
 </head>
 <body>
