--- a/pseudoclass2.html
+++ b/pseudoclass2.html
@@ -6,8 +6,9 @@
     <title>Structural Pseudo-classes Example</title>
     <style>
  
-        p:first-child {
+        div:first-child {
             font-weight: bold;
+            color: blueviolet;
         }
         p:last-child {
             font-style: italic;
@@ -27,12 +28,22 @@
     </style>
 </head>
 <body>
+    
     <div>
         <p>This is the first paragraph</p>
         <p>This is a middle paragraph.</p>
         <p>This is the last paragraph (italic).</p>
     </div>
-
+    <div>
+        <p>This is the first paragraph</p>
+        <p>This is a middle paragraph.</p>
+        <p>This is the last paragraph (italic).</p>
+    </div>
+    <div>
+        <p>This is the first paragraph</p>
+        <p>This is a middle paragraph.</p>
+        <p>This is the last paragraph (italic).</p>
+    </div>
     <ul>
         <li>Item 1</li>
         <li>Item 2 </li>
