--- a/pseudoclass3.html
+++ b/pseudoclass3.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form Pseudo-classes Example</title>
     <style>
-        input[type="checkbox"]:checked {
+        .we:checked {
             outline: 2px solid rgb(241, 37, 37);
         }
 
@@ -32,12 +32,11 @@
 
     <!-- :checked -->
     <div>
-        <label>
-            <input type="checkbox" name="agree" checked> Checked Checkbox
-        </label>
-        <label>
-            <input type="checkbox" name="agree"> Unchecked Checkbox
-        </label>
+        <label>sports</label>
+            <input type="checkbox" class="we" name="agree" > play
+            <input type="checkbox" class="we" name="agree"> enjoy
+            <input type="checkbox" class="we" name="agree"> sad
+        
     </div>
 
     <!-- :disabled -->
