--- a/pseudoclass4.html
+++ b/pseudoclass4.html
@@ -21,9 +21,10 @@
 
         
         :root {
-            --primary-color: blue;
+            --primary-color: rgb(166, 166, 232);
+            --size:34px;
         }
-        body {
+        p{
             color: var(--primary-color);
         }
 
@@ -43,10 +44,10 @@
         }
 
     
-        div:nth-of-type(3) {
+        /* div:nth-of-type(3) {
             background-color: yellow;
             padding: 5px;
-        }
+        } */
 
     </style>
 </head>
