--- a/task.html
+++ b/task.html
@@ -1,1 +1,120 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Animated Elements</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f0f0; /* Light gray background */
+        }
+
+        header {
+            background-color: #333; /* Darker header background */
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+
+        h1 {
+          margin-bottom: 0.5em;
+        }
+
+        .container {
+            width: 80%;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: white;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
+        }
+
+        p {
+          line-height: 1.6;
+        }
+
+        .animated-box {
+            width: 150px;
+            height: 150px;
+            background-color: #007bff; /* Blue box */
+            margin: 20px auto;
+            border-radius: 20px;
+            animation-duration: 4s; /* Adjust duration as needed */
+            animation-timing-function: linear; /* Smooth animation */
+            animation-iteration-count: infinite; /* Loop animation */
+        }
+
+        .animation1 {
+            animation-name: moveHorizontal;
+        }
+
+        .animation2 {
+            animation-name: rotate;
+        }
+        .animation3 {
+            animation-name: scale;
+        }
+        .animation4 {
+            animation-name: changeColor;
+        }
+
+
+        @keyframes moveHorizontal {
+            0% { transform: translateX(0); }
+            50% { transform: translateX(100px); }
+            100% { transform: translateX(0); }
+        }
+
+        @keyframes rotate {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        @keyframes scale {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.2); }
+            100% { transform: scale(1); }
+        }
+        @keyframes changeColor {
+            0% { background-color: blue; }
+            50% { background-color: green; }
+            100% { background-color: blue; }
+        }
+
+        footer {
+            background-color: #333; /* Darker footer background */
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+            position: fixed; /* Fixed to the bottom */
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Welcome to My Animated Page</h1>
+    </header>
+
+    <div class="container">
+        <p>This is a simple webpage demonstrating different CSS animations.  We've included a few examples of how you can use animations to add visual interest to your website.  Experiment with the different animation properties to create your own unique effects.</p>
+
+        <p>CSS animations are a powerful tool for web developers. They allow you to create smooth and engaging user experiences without the need for complex JavaScript code.  By using keyframes, you can define the different stages of an animation and control how it transitions between those stages.</p>
+
+        <div class="animated-box animation1"></div>
+        <div class="animated-box animation2"></div>
+        <div class="animated-box animation3"></div>
+        <div class="animated-box animation4"></div>
+    </div>
+
+    <footer>
+        &copy; 2023 My Website
+    </footer>
+
+</body>
+</html>
