--- a/gradients.html
+++ b/gradients.html
@@ -31,22 +31,22 @@
         }
 
         .demo1 {
-            background: linear-gradient(to left, rgb(204, 255, 0), rgb(0, 21, 255),red);
+            background: linear-gradient(to top right, rgb(204, 255, 0), rgb(0, 21, 255),red);
         }
         .demo2 {
             background: linear-gradient(45deg, rgb(252, 252, 252), purple ,red);
         }
         .demo3 {
-            background: linear-gradient(to bottom, orange , pink , cyan);
+            background: linear-gradient(to bottom, orange 4%, rgb(236, 13, 50)20% , cyan 80%);
         }
 
         
         .demo4 {
-            background: repeating-linear-gradient(to bottom, rgb(255, 0, 191), rgb(176, 254, 99) 10px, blue 20px);
+            background: repeating-linear-gradient(to bottom, rgb(255, 0, 191) 20px, rgb(176, 254, 99) 30px , blue  34px);
         }
 
         .demo5 {
-            background: radial-gradient(circle at bottom, rgb(179, 255, 0), rgb(19, 220, 180), green,purple);
+            background: radial-gradient(circle at 40px 50px , rgb(179, 255, 0), rgb(19, 220, 180), green,purple);
         }
         .demo6 {
             background: radial-gradient(ellipse at center, blue, cyan, white);
@@ -58,7 +58,7 @@
 
     
         .demo8 {
-            background: conic-gradient(red, yellow, green,blue);
+            background:conic-gradient(red,yellow)
         }
         .demo9 {
             background: conic-gradient(from 0deg, red 0deg 120deg, yellow 120deg 240deg, blue 240deg 360deg);
