--- a/transformation.html
+++ b/transformation.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -21,7 +21,7 @@
       transform-style: preserve-3d;
       transition: transform 1s ease-in-out;
       display: flex;
-      justify-content: center;
+      /* justify-content: center; */
       align-items: center;
       color: white;
       font-size: 20px;
@@ -29,12 +29,12 @@
     }
 
     .box1:hover {
-      transform: translateX(100px); 
+      transform: translateX(1000px); 
       /* transform: translateX(100px) translateY(50px) translateZ(50px);  */
     }
 
    
-    .box2:hover {
+    /* .box2:hover {
       transform: translateY(50px);
     }
 
@@ -56,20 +56,20 @@
    
     .box6:hover {
       transform: rotateZ(60deg);
-    }
+    } */
 
   </style>
 </head>
 <body>
   <div class="box box1">translateX</div>
-  <div class="box box2">translateY</div>
+  <!-- <div class="box box2">translateY</div>
   <div class="box box3">translateZ</div>
   <div class="box box4">rotateX</div>
   <div class="box box5">rotateY</div>
-  <div class="box box6">rotateZ</div>
+  <div class="box box6">rotateZ</div> -->
 </body>
-</html> -->
-<!DOCTYPE html>
+</html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -82,7 +82,6 @@
       height: 100vh;
       margin: 0;
       background-color: #f0f0f0;
-      perspective: 500px;
     }
 
     .box {
@@ -129,4 +128,4 @@
   <div class="box box4">skewX</div>
   <div class="box box5">skewY</div>
 </body>
-</html>
+</html> -->
