--- a/transition.html
+++ b/transition.html
@@ -13,9 +13,8 @@
       text-align: center;
       line-height: 50px;
       border-radius: 5px;
-      transition: width 2s linear 0.5s, background-color 1s linear 0s;
+      transition: all 10s ease-in-out 0.5s;
     }
-
     .button:hover {
       width: 200px;
       background-color: red;
@@ -47,10 +46,10 @@
         transition: transform 0.5s ease, background-color 1s ease; 
       }
       .box:hover {
-        /* transform: translate(50px, 100px) rotate(45deg) scale(2, 1.5) skew(30deg, 10deg); */
-        transform: skew(30deg,20deg) ;
-        /* transform-origin: top; */
-        /* background-color: green; */
+         transform:scale(-2,0);
+        /* transform: skew(30deg,20deg) ; */
+        /* transform-origin: bottom right; */
+         background-color: green; 
       }
       </style>
 </head>
